--- a/src/views/students.ejs
+++ b/src/views/students.ejs
@@ -5,13 +5,14 @@
   </head>
   <body>
     <h1>Student Table</h1>
+    <button onclick="window.location.href='/'">Home</button>
     <table border="1">
       <thead>
         <tr>
-          <th>ID</th>
+          <th>Student ID</th>
           <th>Name</th>
           <th>Age</th>
-          <th>Delete</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
@@ -21,7 +22,7 @@
           <td><%= student.name %></td>
           <td><%= student.age %></td>
           <td>
-            <a href="/students/delete/<%= student.student_id %>">Delete</a>
+            <a href="/students/edit/<%= student.sid %>">Update</a>
           </td>
         </tr>
         <% }); %>
