User should now be able to add a student. Validation seems to be working fine now as well for adding.

--- a/src/views/students.ejs
+++ b/src/views/students.ejs
@@ -6,6 +6,7 @@
   <body>
     <h1>Student Table</h1>
     <button onclick="window.location.href='/'">Home</button>
+    <button onclick="window.location.href='/students/add'">Add Student</button>
     <table border="1">
       <thead>
         <tr>
