Adding 'Home' button to grades page and also making sure all students are displayed (even if they are not linked to any module)

--- a/src/views/grades.ejs
+++ b/src/views/grades.ejs
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1>Grades</h1>
+  <button onclick="window.location.href='/'">Home</button>
   <table border="1">
     <thead>
       <tr>
