Last commit. Tidying up code and commenting where appropriate

--- a/src/views/addStudent.ejs
+++ b/src/views/addStudent.ejs
@@ -11,7 +11,7 @@
     <p style="color: red"><%= error %></p>
     <% } %>
 
-    <!-- Add Form -->
+    <!-- Add Student Form -->
     <form method="POST" action="/students/add">
       <label for="sid">Student ID:</label>
       <input type="text" id="sid" name="sid" required /><br /><br />
