--- a/src/views/lecturers.ejs
+++ b/src/views/lecturers.ejs
@@ -5,6 +5,8 @@
   </head>
   <body>
     <h1>Lecturers</h1>
+    
+    <!-- Home page button -->
     <button onclick="window.location.href='/'">Home</button>
 
     <table border="1">
