--- a/src/views/mainPage.ejs
+++ b/src/views/mainPage.ejs
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Main Page</title>
-</head>
-<body>
-  <h1>G00418763</h1>
-  <ul>
-    <li><a href="<%= studentLink %>">Students</a></li>
-    <li><a href="<%= gradeLink %>">Grades</a></li>
-    <li><a href="<%= lecturerLink %>">Lecturers</a></li>
-  </ul>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Main Page</title>
+  </head>
+  <body>
+    <!-- My own student ID -->
+    <h1>G00418763</h1>
+    <ul>
+      <li><a href="<%= studentLink %>">Students</a></li>
+      <li><a href="<%= gradeLink %>">Grades</a></li>
+      <li><a href="<%= lecturerLink %>">Lecturers</a></li>
+    </ul>
+  </body>
 </html>
