--- a/src/views/students.ejs
+++ b/src/views/students.ejs
@@ -5,8 +5,10 @@
   </head>
   <body>
     <h1>Student Table</h1>
+    <!-- Home page and Add buttons -->
     <button onclick="window.location.href='/'">Home</button>
     <button onclick="window.location.href='/students/add'">Add Student</button>
+    
     <table border="1">
       <thead>
         <tr>
